; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_siena_sriov.c_efx_sriov_set_vf_spoofchk.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_siena_sriov.c_efx_sriov_set_vf_spoofchk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.efx_nic = type { i32, %struct.efx_vf* }
%struct.efx_vf = type { i64, i32, i32 }

@EINVAL = common dso_local global i32 0, align 4
@VF_TX_FILTER_ON = common dso_local global i32 0, align 4
@VF_TX_FILTER_OFF = common dso_local global i32 0, align 4
@EBUSY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @efx_sriov_set_vf_spoofchk(%struct.net_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.net_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.efx_nic*, align 8
  %9 = alloca %struct.efx_vf*, align 8
  %10 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %11 = load %struct.net_device*, %struct.net_device** %5, align 8
  %12 = call %struct.efx_nic* @netdev_priv(%struct.net_device* %11)
  store %struct.efx_nic* %12, %struct.efx_nic** %8, align 8
  %13 = load i32, i32* %6, align 4
  %14 = load %struct.efx_nic*, %struct.efx_nic** %8, align 8
  %15 = getelementptr inbounds %struct.efx_nic, %struct.efx_nic* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = icmp sge i32 %13, %16
  br i1 %17, label %18, label %21

18:                                               ; preds = %3
  %19 = load i32, i32* @EINVAL, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %4, align 4
  br label %54

21:                                               ; preds = %3
  %22 = load %struct.efx_nic*, %struct.efx_nic** %8, align 8
  %23 = getelementptr inbounds %struct.efx_nic, %struct.efx_nic* %22, i32 0, i32 1
  %24 = load %struct.efx_vf*, %struct.efx_vf** %23, align 8
  %25 = load i32, i32* %6, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds %struct.efx_vf, %struct.efx_vf* %24, i64 %26
  store %struct.efx_vf* %27, %struct.efx_vf** %9, align 8
  %28 = load %struct.efx_vf*, %struct.efx_vf** %9, align 8
  %29 = getelementptr inbounds %struct.efx_vf, %struct.efx_vf* %28, i32 0, i32 1
  %30 = call i32 @mutex_lock(i32* %29)
  %31 = load %struct.efx_vf*, %struct.efx_vf** %9, align 8
  %32 = getelementptr inbounds %struct.efx_vf, %struct.efx_vf* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = icmp eq i64 %33, 0
  br i1 %34, label %35, label %46

35:                                               ; preds = %21
  %36 = load i32, i32* %7, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %40

38:                                               ; preds = %35
  %39 = load i32, i32* @VF_TX_FILTER_ON, align 4
  br label %42

40:                                               ; preds = %35
  %41 = load i32, i32* @VF_TX_FILTER_OFF, align 4
  br label %42

42:                                               ; preds = %40, %38
  %43 = phi i32 [ %39, %38 ], [ %41, %40 ]
  %44 = load %struct.efx_vf*, %struct.efx_vf** %9, align 8
  %45 = getelementptr inbounds %struct.efx_vf, %struct.efx_vf* %44, i32 0, i32 2
  store i32 %43, i32* %45, align 4
  store i32 0, i32* %10, align 4
  br label %49

46:                                               ; preds = %21
  %47 = load i32, i32* @EBUSY, align 4
  %48 = sub nsw i32 0, %47
  store i32 %48, i32* %10, align 4
  br label %49

49:                                               ; preds = %46, %42
  %50 = load %struct.efx_vf*, %struct.efx_vf** %9, align 8
  %51 = getelementptr inbounds %struct.efx_vf, %struct.efx_vf* %50, i32 0, i32 1
  %52 = call i32 @mutex_unlock(i32* %51)
  %53 = load i32, i32* %10, align 4
  store i32 %53, i32* %4, align 4
  br label %54

54:                                               ; preds = %49, %18
  %55 = load i32, i32* %4, align 4
  ret i32 %55
}

declare dso_local %struct.efx_nic* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
